# web-capture-helper

./: .gitignore  README.md  README_QUICKSTART.md  browser_capture_snippet.js  build_exe.bat  pyproject.toml  requirements.txt  run_capture_helper.bat  setup_windows.bat
.github/workflows/: build-windows-exe.yml
docs/: CAPTURE_PLAN.md
src/web_capture_helper/: __init__.py  main.py  server.py
tests/: test_main.py  test_runtime_config.py  test_server.py
